<resources>

    <string name="app_name">MyCarPoolCalculator</string>
    <string name="LblMiles">Number of Miles:</string>
    <string name="LblPeople">Number of People:</string>
    <string name="LblGasPrice">Gas Price per Gallon:</string>
    <string name="LblCarMileage">Car Mileage:</string>
    <string name="LblTollCharges">Toll Charges:</string>
    <string name="LblStartDate">Enter Start Date:</string>
    <string name="LblEndDate">Enter End Date:</string>
    <string name="btnCalculate">Calculate</string>
    <string name="btnReset">Reset</string>
    <string name="btnSave">Save</string>
    <string name="btnDelete">Delete</string>
    <string name="btnSearch">Search</string>
    <string name="btnDisplay">Display</string>
    <string name="LblTotalGas">Total Gas Expense: </string>
    <string name="LblTotalExpense">Total Commute Expense: </string>
    <string name="LblExpensePerPerson">Individual Commute Expense: </string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_carpool_cal">CarpoolCal</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_carpool_record">CarpoolRecord</string>
    <string name="title_activity_records_by_date">RecordsByDate</string>
    <string name="LblRecordDate">Date</string>
    <string name="LblRecordPeople">People</string>
    <string name="LblRecordMiles">Miles</string>
    <string name="LblRecordIndividualExpense">Expense</string>

</resources>